--- a/index.html
+++ b/index.html
@@ -15,35 +15,12 @@
     <style>
       body {
         background-color: black;
-        color: white;
+        color: yellow;
+        font-family: 'Brush Script MT', cursive;
       }
     </style>
   </head>
   <body>
-
-    <!-- Navbar (you can add your navigation here) -->
-     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #491c73;">
-      <div class="container">
-        <a class="navbar-brand" href="#" style="color: yellow;">Mike M</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
 
     <!-- Header/Intro Section -->
     <section class="jumbotron text-center" style="background-color: #491c73; color: yellow;">
@@ -51,24 +28,48 @@
       <p>Web Developer | Graphic Designer | Creative Thinker</p>
     </section>
 
+    <!-- Navbar (you can add your navigation here) -->
+     <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #491c73; margin-bottom: 10px;">
+      <div class="container">
+        <a class="navbar-brand" href="index.html" style="color: yellow;">Mike M</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Welcome</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
 <!-- About Section -->
 <section class="container text-center">
-  <h2 style="font-family: Arial, sans-serif;"></h2>
-  <div class="row align-items-center">
-    <div class="col">
-      <img src="mike.jpg" class="img-fluid" alt="Image 1">
+  <div style="display: flex; align-items: center;">
+    <div>
+      <img src="mike.jpg" alt="Mike's Image" style="max-width: 80%;">
     </div>
-    <div class="col">
-      <img src="red.jpg" class="img-fluid" alt="Image 2">
-    </div>
-    <div class="col" style="margin-top: 50px;">
-      <img src="roo.jpg" class="img-fluid" alt="Image 3">
+    <div style="flex: 1; text-align: left; padding-left: 20px;">
+      <h2 style="text-align: left">Welcome!</h2>
+      <p>
+        My name is Mike Mullen, a web designer located in Harrisonburg, VA. I have goals of creating minimalistic and simple designs while bringing the best user experience possible.
+      </p>
+      <hr style="border: 2px solid yellow; margin-top: 20px;">
     </div>
   </div>
-  <p style="margin-top: 20px; font-family: Arial, sans-serif;">
-    Welcome to my portfolio website! I'm a passionate web developer and graphic designer based in Harrisonburg. I have a strong love for clean and minimalistic design. My goal is to create user-friendly, visually appealing websites and digital experiences.
-  </p>
 </section>
+
+
 
 
     <!-- Footer -->
