--- a/contact.html
+++ b/contact.html
@@ -23,14 +23,14 @@
   <body>
 
         <!-- Header/Intro Section -->
-    <section class="jumbotron text-center" style="background-color: #491c73; color: yellow;">
+    <section class="jumbotron text-center" style="background-color: #4B0082; color: yellow;">
       <h1>Mike M</h1>
       <p>Web Developer | Graphic Designer | Creative Thinker</p>
     </section>    
 
     <!-- Navbar (you can add your navigation here) -->
      <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #491c73; margin-bottom: 10px;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #4B0082; margin-bottom: 10px;">
       <div class="container">
         <a class="navbar-brand" href="index.html" style="color: yellow;">Mike M</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,7 @@
 
         <!-- Contact Section -->
     <section class="container">
-      <h2>Contact Me</h2>
+      <h2 style="margin-top: 50px; margin-bottom: 25px;">Contact Me</h2>
         <p>
           <ul>
             <li>Phone - 540-755-9774
@@ -68,6 +68,11 @@
       <p>&copy; 2023 Mike M</p>
     </footer>
 
+    <!-- LOAD BOOTSTRAP JAVASCRIPT - DO NOT DELETE BELOW -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <!-- DO NOT DELETE ABOVE - END LOADING BOOTSTRAP JAVASCRIPT -->
+  </body>
+</html>
     <!-- LOAD BOOTSTRAP JAVASCRIPT - DO NOT DELETE BELOW -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- DO NOT DELETE ABOVE - END LOADING BOOTSTRAP JAVASCRIPT -->
