--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   <body>
 
     <!-- Header/Intro Section -->
-    <section class="jumbotron text-center" style="background-color: #491c73; color: yellow;">
+    <section class="jumbotron text-center" style="background-color: #4B0082; color: yellow;">
       <h1>Mike M</h1>
       <p>Web Developer | Graphic Designer | Creative Thinker</p>
     </section>
 
     <!-- Navbar (you can add your navigation here) -->
      <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #491c73; margin-bottom: 10px;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #4B0082; margin-bottom: 10px;">
       <div class="container">
         <a class="navbar-brand" href="index.html" style="color: yellow;">Mike M</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
