--- a/about.html
+++ b/about.html
@@ -23,14 +23,14 @@
   <body>
 
         <!-- Header/Intro Section -->
-    <section class="jumbotron text-center" style="background-color: #491c73; color: yellow;">
+    <section class="jumbotron text-center" style="background-color: #4B0082; color: yellow;">
       <h1>Mike M</h1>
       <p>Web Developer | Graphic Designer | Creative Thinker</p>
     </section>    
 
     <!-- Navbar (you can add your navigation here) -->
      <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #491c73; margin-bottom: 10px;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #4B0082; margin-bottom: 10px;">
       <div class="container">
         <a class="navbar-brand" href="index.html" style="color: yellow;">Mike M</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,11 +58,16 @@
     <h1 style="font-family: 'Brush Script MT', cursive; text-align: left;">About me...
           <hr style="border: 2px solid yellow; margin-top: 20px;"></h1>
 
+<section class="container">
+  <p>
+    I'm a passionate web developer and graphic designer based in Harrisonburg. With a strong love for clean and minimalistic design, my goal is to create user-friendly, visually appealing websites and digital experiences. I enjoy staying up-to-date with the latest web technologies and design trends. When I'm not coding or designing, you can find me exploring new creative projects, reading, or enjoying the outdoors.
+  </p>
+</section>
+
 <!-- Skills Section -->
 <section class="container" style="margin-top: 40px;">
-  <h2>My Skills</h2>
   <div style="display: flex; align-items: center;">
-    <ul style="flex: 1; margin-left: 300px;">
+    <ul style="flex: 1; margin-left: 200px;">
       <li>HTML5</li>
       <li>CSS3</li>
       <li>JavaScript</li>
@@ -73,7 +78,9 @@
       <li>Web Development</li>
     </ul>
     <div>
-      <img src="roo.jpg" width="300" height="450" style="margin-right: 300px;"alt="pic of me and roo">
+      <div style="display: flex;">
+      <img src="roo.jpg" width="300" height="450" style="margin-right: 50px;"alt="pic of me and roo">
+      <img src="red.jpg" width="350" height="375" style="margin-right: 100px; margin-top: 50px;" alt="pic of me in red"> 
     </div>
   </div>
 </section>
