--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,9 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
@@ -68,11 +71,6 @@
       <p>&copy; 2023 Mike M</p>
     </footer>
 
-    <!-- LOAD BOOTSTRAP JAVASCRIPT - DO NOT DELETE BELOW -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <!-- DO NOT DELETE ABOVE - END LOADING BOOTSTRAP JAVASCRIPT -->
-  </body>
-</html>
     <!-- LOAD BOOTSTRAP JAVASCRIPT - DO NOT DELETE BELOW -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- DO NOT DELETE ABOVE - END LOADING BOOTSTRAP JAVASCRIPT -->
