--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
@@ -57,7 +60,7 @@
 <section class="container text-center">
   <div style="display: flex; align-items: center;">
     <div>
-      <img src="mike.jpg" alt="Mike's Image" style="max-width: 80%;">
+      <img src="mike.jpg" alt="Mike's Image" style="max-width: 80%; margin-top: 50px;">
     </div>
     <div style="flex: 1; text-align: left; padding-left: 20px;">
       <h2 style="text-align: left">Welcome!</h2>
