--- a/contact.html
+++ b/contact.html
@@ -13,16 +13,25 @@
     <!-- Custom styles -->
     <link href="style.css" rel="stylesheet">
     <style>
+      a {
+        color: yellow;
+      }
+
       body {
         background-color: black;
         color: yellow;
         font-family: 'Brush Script MT', cursive;
       }
+      footer {
+        text-align: center;
+        padding: 10px;
+      }
+
     </style>
   </head>
   <body>
 
-        <!-- Header/Intro Section -->
+    <!-- Header/Intro Section -->
     <section class="jumbotron text-center" style="background-color: #4B0082; color: yellow;">
       <h1>Mike M</h1>
       <p>Web Developer | Graphic Designer | Creative Thinker</p>
