--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
     <!-- Custom styles -->
     <link href="style.css" rel="stylesheet">
     <style>
+      a {
+        color: yellow;
+      }
+
       body {
         background-color: black;
         color: yellow;
         font-family: 'Brush Script MT', cursive;
       }
+      footer {
+        text-align: center;
+        padding: 10px;
+      }
+
     </style>
   </head>
   <body>
