--- a/about.html
+++ b/about.html
@@ -18,13 +18,14 @@
       }
 
       body {
-        background-color: black;
-        color: yellow;
-        font-family: 'Brush Script MT', cursive;
+        background-color: white;
+        color: black;
+        font-family: 'Perpetua';  font-size: 30px;
       }
+
       footer {
         text-align: center;
-        padding: 10px;
+        margin-top: 30px;
       }
 
     </style>
@@ -32,16 +33,16 @@
   <body>
 
         <!-- Header/Intro Section -->
-    <section class="jumbotron text-center" style="background-color: #4B0082; color: yellow;">
+    <section class="jumbotron text-center" style="background-color: #4B0082; color: yellow; margin-botom: 0;">
       <h1>Mike M</h1>
       <p>Web Developer | Graphic Designer | Creative Thinker</p>
     </section>    
 
     <!-- Navbar (you can add your navigation here) -->
      <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #4B0082; margin-bottom: 10px;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #cace2e; margin-bottom: 10px; margin-top: 0; padding: 0;">
       <div class="container">
-        <a class="navbar-brand" href="index.html" style="color: yellow;">Mike M</a>
+        <a class="navbar-brand" href="index.html" style="color: #4B0082;">Mike M</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -67,8 +68,8 @@
 
 <section class="container text-center">
   <div style="flex: 2; text-align: left; padding-left: 20px;">
-    <h1 style="font-family: 'Brush Script MT', cursive; text-align: left;">About me...
-          <hr style="border: 2px solid yellow; margin-top: 20px;"></h1>
+    <h1 style="font-family: Perpetua, cursive; text-align: center; padding-top: 50px;">About me...
+          <hr style="border: 2px solid rebeccapurple; margin-top: 20px;"></h1>
 
 <section class="container">
   <p>
@@ -79,8 +80,8 @@
 <!-- Skills Section -->
 <section class="container" style="margin-top: 40px;">
   <div style="display: flex; align-items: center;">
-    <ul style="flex: 1; margin-left: 200px;">
-      <li>HTML5</li>
+    <ul style="flex: 1; margin-right: 150px; margin-left: 25px;">
+      <li >HTML5</li>
       <li>CSS3</li>
       <li>JavaScript</li>
       <li>Bootstrap</li>
@@ -91,8 +92,8 @@
     </ul>
     <div>
       <div style="display: flex;">
-      <img src="roo.jpg" width="300" height="450" style="margin-right: 50px;"alt="pic of me and roo">
-      <img src="red.jpg" width="350" height="375" style="margin-right: 100px; margin-top: 50px;" alt="pic of me in red"> 
+      <img src="roo.jpg" width="300" height="450" style="margin-right: 50px; border: 10px solid #7705df; box-sizing: border-box;" alt="pic of me and roo">
+      <img src="red.jpg" width="500" height="390" style="margin-left: 100px; margin-top: 50px; border: 10px solid #7705df; box-sizing: border-box;" alt="pic of me in red"> 
     </div>
   </div>
 </section>
