--- a/contact.html
+++ b/contact.html
@@ -18,30 +18,30 @@
       }
 
       body {
-        background-color: black;
-        color: yellow;
-        font-family: 'Brush Script MT', cursive;
-      }
-      footer {
-        text-align: center;
-        padding: 10px;
+        background-color: white;
+        color: black;
+        font-family: 'Perpetua';  font-size: 30px;
       }
 
+      footer {
+        text-align: center;
+        margin-top: 30px;
+      }
     </style>
   </head>
   <body>
 
     <!-- Header/Intro Section -->
-    <section class="jumbotron text-center" style="background-color: #4B0082; color: yellow;">
+    <section class="jumbotron text-center" style="background-color: #4B0082; color: yellow; margin-bottom: 10px; margin-top: 0; padding: 0;">
       <h1>Mike M</h1>
       <p>Web Developer | Graphic Designer | Creative Thinker</p>
     </section>    
 
     <!-- Navbar (you can add your navigation here) -->
      <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #4B0082; margin-bottom: 10px;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #cace2e; margin-bottom: 0;">
       <div class="container">
-        <a class="navbar-brand" href="index.html" style="color: yellow;">Mike M</a>
+        <a class="navbar-brand" href="index.html" style="color: #4B0082;">Mike M</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -65,16 +65,18 @@
     </nav>
 
         <!-- Contact Section -->
-    <section class="container">
-      <h2 style="margin-top: 50px; margin-bottom: 25px;">Contact Me</h2>
-        <p>
-          <ul>
-            <li>Phone - 540-755-9774
-            <li>Email - mike.dm1200@gmail.com
-          </ul>
-         </p> 
-    </section>
-
+<section class="container" style="display: flex; flex-wrap: wrap; text-align: center; margin-top: 50px; margin-bottom: 25px;">
+  <div style="flex: 1;">
+    <h2 style="padding-top: 125px;">Contact Me!</h2>
+    <ul style="list-style: none; padding-top: 25px; padding-right: 25px;">
+      <li>Phone - <u>540-755-9774</u></li>
+      <li>Email - <u>mike.dm1200@gmail.com</u></li>
+    </ul>
+  </div>
+  <div style="flex: 1;">
+    <img src="waterfall.jpg" alt="Contact Image" style="max-width: 50%; border: 10px solid #7705df; box-sizing: border-box;">
+  </div>
+</section>
             <!-- Footer -->
     <footer class="text-center py-3" style="margin-top: 60px;">
       <p>&copy; 2023 Mike M</p>
