--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
       }
 
       body {
-        background-color: black;
-        color: yellow;
-        font-family: 'Brush Script MT', cursive;
-      }
-      footer {
-        text-align: center;
-        padding: 10px;
+        background-color: white;
+        color: black;
+        font-family: 'Perpetua';  font-size: 30px;
       }
 
+      footer {
+        text-align: center;
+        margin-top: 30px;
+      }
     </style>
   </head>
   <body>
 
     <!-- Header/Intro Section -->
-    <section class="jumbotron text-center" style="background-color: #4B0082; color: yellow;">
+    <section class="jumbotron text-center" style="background-color: #4B0082; color: yellow; margin-bottom: 10px; margin-top: 0; padding: 0;">
       <h1>Mike M</h1>
       <p>Web Developer | Graphic Designer | Creative Thinker</p>
     </section>
 
     <!-- Navbar (you can add your navigation here) -->
      <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #4B0082; margin-bottom: 10px;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #cace2e; color: white; margin-bottom: 0;">
       <div class="container">
-        <a class="navbar-brand" href="index.html" style="color: yellow;">Mike M</a>
+        <a class="navbar-brand" href="index.html" style="color: #4B0082;">Mike M</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -69,14 +69,14 @@
 <section class="container text-center">
   <div style="display: flex; align-items: center;">
     <div>
-      <img src="mike.JPG" alt="Mike's Image" style="max-width: 80%; margin-top: 50px;">
+      <img src="mike.JPG" alt="Mike's Image" style="margin-top: 50px; border: 10px solid #7705df; box-sizing: border-box;">
     </div>
-    <div style="flex: 1; text-align: left; padding-left: 20px;">
-      <h2 style="text-align: left">Welcome!</h2>
-      <p>
+    <div style="flex: 1; text-align: center; padding-left: 20px;">
+      <h2 style="text-align: center; padding-left: 80px;"><u>Welcome!</u></h2>
+      <p style="padding-left: 100px;">
         My name is Mike Mullen, a web designer located in Harrisonburg, VA. I have goals of creating minimalistic and simple designs while bringing the best user experience possible.
       </p>
-      <hr style="border: 2px solid yellow; margin-top: 20px;">
+      <hr style="border: 2px solid rebeccapurple; margin-top: 20px; margin-left: 100px;">
     </div>
   </div>
 </section>
