--- a/projects.html
+++ b/projects.html
@@ -14,35 +14,34 @@
     <link href="style.css" rel="stylesheet">
     <style>
       a {
-        color: yellow;
+        color: #4B0082;
       }
 
       body {
-        background-color: black;
-        color: yellow;
-        font-family: 'Brush Script MT', cursive;
-      }
-      
-      footer {
-        text-align: center;
-        padding: 10px;
+        background-color: white;
+        color: black;
+        font-family: 'Perpetua';  font-size: 30px;
       }
 
+      footer {
+        text-align: center;
+        margin-top: 30px;
+      }
     </style>
   </head>
   <body>
 
         <!-- Header/Intro Section -->
-    <section class="jumbotron text-center" style="background-color: #4B0082; color: yellow;">
+    <section class="jumbotron text-center" style="background-color: #4B0082; color: yellow; margin-bottom: 10px; margin-top: 0; padding: 0;">
       <h1>Mike M</h1>
       <p>Web Developer | Graphic Designer | Creative Thinker</p>
     </section>    
 
     <!-- Navbar (you can add your navigation here) -->
      <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #4B0082; margin-bottom: 10px;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #cace2e; margin-bottom: 0;">
       <div class="container">
-        <a class="navbar-brand" href="index.html" style="color: yellow;">Mike M</a>
+        <a class="navbar-brand" href="index.html" style="color: #4B0082;">Mike M</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -68,17 +67,19 @@
 <section class="container text-center">
   <div style="display: flex; align-items: center;">
     <div style="border-bottom: 2px solid yellow; padding-bottom: 50px; margin-top: 50px; border: 1200px;">
-      <img src="ryan.jpg" alt="Ryan's Image" style="width: 400px; length: 200px; margin-top: 50px; margin-left: 50px;">
+      <img src="ryan.jpg" alt="Ryan's Image" style="border: 10px solid #7705df; box-sizing: border-box; width: 400px; length: 200px; margin-top: 50px; margin-left: 50px;">
     </div>
     <div style="flex: 1; text-align: left; padding-left: 20px;">
-      <h2 style="text-align: center; color: yellow;"><u><a href="https://drive.google.com/file/d/1jFVE1T4FkCNiKT6YVxY4NKLu70UFNcHu/view?usp=drive_link">"20 minutes"</a></u></h2>
+      <h2 style="text-align: center; color: #4B0082;"><u><a href="https://drive.google.com/file/d/1jFVE1T4FkCNiKT6YVxY4NKLu70UFNcHu/view?usp=drive_link">"20 minutes"</a></u></h2>
+      <h3 style="text-align: center; color: black;">Ryan calls his friend Mike to set up a meeting at the local basketball courts.</h3>
     </div>
   </div>
   <div style="display: flex; align-items: center;">
     <div style="text-align: left; padding-right: 20px;">
       <h2 style="text-align: center; margin-left: 50px;"><u><a href="https://docs.google.com/document/d/117R2HJ48kuY7as6y2iNpNipeusw8MaRpT3wcv8tM_qw/edit?usp=drive_link">Ad Deconstruction: "Kick of Destiny"</a></u></h2>
+      <h3 style="text-align: center; color: black;">Alex Fish and Mike Mullen analyze the complex messaging hidden inside FanDuel advertisements in promotion of sports gambling.</h3>
     </div>
-    <img src="kick_of_destiny.png" style="width: 300px; length: 600px; margin-top: 50px; margin-bottom: 50px; margin-left: 150px;">
+    <img src="kick_of_destiny.png" style="border: 10px solid #7705df; box-sizing: border-box; width: 300px; length: 600px; margin-top: 50px; margin-bottom: 50px; margin-left: 150px;">
 
   </div>
 </section>
