--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,8 @@
       body {
         background-color: white;
         color: black;
-        font-family: 'Perpetua';  font-size: 30px;
+        font-family: 'Perpetua' serif;  
+        font-size: 30px;
       }
 
       footer {
