--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
       body {
         background-color: white;
         color: black;
-        font-family: 'Perpetua' serif;  
+        font-family: 'Perpetua', serif;  
         font-size: 25px;
       }
 
